examples/type_system/failing/117_if_missing_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    if true 1 else 2
}
